# randompack

./: .buildinfo  .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LANGUAGE_INTERFACES.md  LICENCE  LICENSE  README.md  TODO.txt  codex.continue  gendocs.sh  genindex.html  index.html  meson-setup-perf.sh  meson.build  meson_options.txt  notes.txt  notinlined.sh  objects.inv  rand_dble_extra.inc  readme  run_fast_variants.sh  search.html  searchindex.js  showperf.sh  syncR.sh  syncpy.sh
.claude/: settings.json
.github/workflows/: TagBot.yml  docs.yml  linux-arm.yml  (+10 more)
Randompack.jl/: Manifest.toml  Project.toml  README.md
_modules/: index.html
_sources/: index.rst.txt
_static/: custom.css
article/: randompack.bib  toms.tex
benchmark/: TimeDistCpp.cpp  TimeDistGfortran.f90  TimeDistMKL.c  TimeDistributions.c  TimeDistributions.cpp  TimeEngines.c  TimeFastDirect.c  TimeIntCpp.cpp  TimeIntMKL.c  TimeIntegers.c  TimeIntegers.py  TimeLogExp.c  TimeNormExp.c  TimeUnif.c  TimeUtil.c  meson.build  sleef_avx512.c  sleef_logu10.c
common/: Util.c  Util.h
debian/: changelog  control  copyright  librandompack-dev.install  librandompack0.install  rules  watch
evidence/: big-endian-evidence.txt
examples/: CheckFortranInts.f90  DrawDemo.c  ExamineResolution.c  JumpExample.c  MpiThreadExample.c  RawStream.c  RunCryptoRandom.c  RunExp.c  RunRandom.c  SquaresExample.c  TestBitexact.c  TestSampleProd.c  TestU01Driver.c  TestU01PIT.c  ThreadExample.c  TimeDistC.c  TimeDistFortran.f90  TimeDistributions.R  TimeDistributions.c  TimeDistributions.cpp  TimeDistributions.jl  TimeDistributions.m  TimeDistributions.py  TimeDistributionsMkl.c  TimeEngines.c  TimeFast.c  TimeFastDirect.c  TimeFloat.c  TimeIntegers.c  TimeIntegers.py  TimeLogExp.c  TimeLogarithms.c  TimeMkl  TimeNormC.c  TimeNormExp.c  TimeRanlux.c  TimeUtil.c  TimeUtil.h  Timing.c  bench  (+9 more)
fortran/: README.md  meson.build
fortran/examples/: CheckFortranInts.f90  TimeDistFortran.f90
fortran/src/: gen_randompack_f90.py  implementation.f90  methods.inc  randompack.f90  randompack_c.inc  util.inc
fortran/tests/: meson.build  run_fortran_tests.f90
misc/: jumpgeneral.py  practrand.patch  python-decisions.txt  readme.txt
misc/ranlux-jumps/: compute_ranlux_jumps.c  meson.build
misc/ranlux-work/: TimeRanlux.cpp  TimeRanluxHahnfeld.cpp  compare_ranlux.c  compare_ranlux.cpp  compute_ranlux_jumps.c  extract_hahnmon_lcg.cpp  hahnmon_lcg_output.cpp  hahnmon_state.cpp  meson.build  ref_ranlux_hahnmon.cpp  ref_ranlux_portable.c  sibbidanov_ranluxpp.cpp  verify_agreement.cpp
notes/: CountNorm.jl  README_julia_randn.md  TimeNorm.jl
packaging/: build_tarballs.jl
python/: LICENSE  MANIFEST.in  README.md  build-doc.sh  meson.build  meson_options.txt  pyproject.toml  readme-wheels.txt  setup.py
python/docs/: conf.py  index.rst
python/docs/_build/: .buildinfo  objects.inv  searchindex.js
python/docs/_build/.doctrees/: environment.pickle  index.doctree
python/docs/_build/.doctrees/reference/: index.doctree
python/docs/_build/_sources/reference/: index.rst.txt
python/docs/_templates/: XXX.rst
python/docs/_templates/autosummary/: class.rst
python/docs/reference/: index.rst
python/examples/: ThreadInc.py  ThreadJump.py  ThreadSpawn.py  TimeDist.py  TimeIntegers.py  TimeRandompack.py  TimeReturning.py
python/randompack/: __init__.py  _core.c  _core.pxd  _core.pyx
python/src/: BlasGateway.h  avx2.c  avx512.c  blas.f  blasref.h  buffer_draw.inc  chachacha.inc  crypto_random.inc  cwg128.inc  cwg128_64.h  cwg128_emul.inc  distrib_float.inc  distributions.inc  engines.inc  inplace_logexp.c  jumps.inc  lapack_dpstrf.f  log_exp.inc  log_exp_float.inc  norm_exp.inc  norm_exp_float.inc  norm_exp_mod.inc  pcg64_dxsm.inc  pcg64_dxsm_emul.inc  pcg64_emul.h  philox4x64.inc  rand_dble.inc  rand_float.inc  randompack.c  randompack.h  randompack_config.h  randompack_float.c  randompack_float.inc  randompack_internal.h  randutil.inc  ranlux_jump.inc  ranluxpp.inc  scale_inplace.inc  scale_inplace_float.inc  sfc64.inc  (+15 more)
python/tests/: test_basic.py  test_continuous.py  test_discrete.py  test_state.py
r-package/: DESCRIPTION  LICENSE  NAMESPACE  README.Rmd  README.md  configure  configure.win  cran-comments.md
reference/: index.html
sandbox/mul576/: TimeMul9x9.c  meson.build  mod_m.h  mul9x9.c  mul9x9.h  mul9x9copy.c  mul_c.h  mul_jirka.h
scripts/: TestBitexact.sh  bench-normexp.sh  build-all.sh  build-wheels.sh  check-python-wheel.sh  gen-R-docs.sh  gendocs.sh  make-julia-tarball.sh  make_julia_tarball.sh  meson-setup-perf.sh  meson-setup.sh  release-python.sh  remote-build.sh  run-test-variants.sh  set_version.sh  show-linux-perf.sh  showperf.sh  syncR.sh  syncpy.sh  test-all.sh  wheel-build.sh  wheel-delete-unsuccessful.sh  wheel-download.sh
simd_timing/: AoS_1x1.inc  AoS_1x4.inc  run_fast_variants.sh
src/: AoS_1x2.inc  AoS_2x1.inc  AoS_2x2.inc  BlasGateway.h  License-Random123.txt  SoA_1x2.inc  SoA_1x4.inc  SoA_2x1.inc  SoA_2x2.inc  TestSeedSeq.cpp  VarmaUtilities.h  allocate.h  avx2.c  avx512.c  blas.f  blasref.h  buffer_draw.inc  chacha-portable.c  chacha-portable.h  chacha-portable.inc  chacha20.c  chachacha.inc  counter_based.inc  crypto_random.inc  csprng.inc  cwg128.inc  cwg128_64.h  cwg128_emul.inc  distrib_float.inc  distributions.inc  engines.inc  error.h  fast.inc  fast12.inc  fast12soa.inc  fast14.inc  fast14soa.inc  fast21soa.inc  fast21x.inc  fast22.inc  (+70 more)
tests/: ExtraUtil.c  ExtraUtil.h  MatrixTestUtil.h  RunTestNo128.c  RunTestVariants.sh  RunTests.c  TestAvx2.c  TestBeta.c  TestBitexact.c  TestBuffer.c  TestChi2.c  TestContinuous.c  TestCreate.c  TestDpstrf.c  TestExp.c  TestF.c  TestFullMantissa.c  TestGamma.c  TestGumbel.c  TestHelpers.c  TestHelpers.h  TestInt.c  TestLogExp.c  TestLognormal.c  TestLongLong.c  TestMvn.c  TestNo128.c  TestNorm.c  TestNormal.c  TestOpenlibm.c  TestPareto.c  TestPerm.c  TestRandom.c  TestRandomCreate.c  TestRandomHelpers.h  TestRandomInt.c  TestRandomNorm.c  TestRandomPerm.c  TestRandomRandomize.c  TestRandomSample.c  (+41 more)
(+138 files in other folders)
