# See DEVELOPER.md for explanations for some of these options.

option('blas',
  type: 'string',
  value: 'auto',
  description: 'System BLAS: builtin/accelerate/mkl/openblas/auto/system (auto searches accelerate/mkl/openblas)'
)

# Creates <build-dir>/examples/Test01Driver
option('TestU01',
  type: 'string',
  value: '',
  description: 'Prefix for TestU01 install (enable when non-empty)'
)

option('build_examples',
  type: 'boolean',
  value: true,
  description: 'Build example programs'
)

option('build_fortran_interface',
  type: 'boolean',
  value: true,
  description: 'Build the Fortran interface'
)

option('build_tests',
  type: 'boolean',
  value: true,
  description: 'Build tests'
)

# Current benchmarking does not show speed-up over -O3 with these options
option('perf',
  type: 'boolean',
  value: false,
  description: 'Enable performance benchmarking flags/macros'
)

option('force_no128',
  type: 'boolean',
  value: false,
  description: 'Force 64x64->128 emulation (pretend no __int128)'
)

option('force_nosimd',
  type: 'boolean',
  value: false,
  description: 'Force scalar code paths and disable SIMD builds'
)
