# See DEVELOPER.md for explanations for some of these options.

option('build_examples',
  type: 'boolean',
  value: true,
  description: 'Build example programs'
)

option('build_benchmarks',
  type: 'boolean',
  value: true,
  description: 'Build benchmark programs'
)

option('build_tests',
  type: 'boolean',
  value: true,
  description: 'Build tests'
)

option('build_fortran_interface',
  type: 'boolean',
  value: true,
  description: 'Build the Fortran interface'
)

option('build_buf8_tests',
  type: 'boolean',
  value: true,
  description: 'Build the BUFSIZE=8 test variant'
)

option('force_no128',
  type: 'boolean',
  value: false,
  description: 'Force non-128-bit-integer fallback code paths'
)

option('force_nosimd',
  type: 'boolean',
  value: false,
  description: 'Force scalar code paths and disable SIMD builds'
)

# auto searches accelerate, openblas, then mkl, and falls back to built-in BLAS
# system searches the same external backends but errors out if none is found
# builtin uses a subset of the Netlib Fortran reference BLAS
option('blas',
  type: 'string',
  value: 'auto',
  description: 'BLAS backend: accelerate/mkl/openblas/auto/system/builtin'
)

# Creates <build-dir>/examples/TestU01Driver
# TestU01 prefix should be given as an absolute path.
option('TestU01_prefix',
  type: 'string',
  value: '',
  description: 'Prefix for TestU01 install (enable when non-empty)'
)
